<resources>
    <string name="app_name">Deviz</string>

    <string name="oferte">Oferte</string>
    <string name="facturi">Facturi</string>
    <string name="produse">Produse</string>
    <string name="rapoarte">Rapoarte</string>
    <string name="clienti">Clienți</string>
    <string name="furnizori">Furnizori</string>


    <string name="adauga_produs">Adaugă produs</string>
    <string name="sterge_produs">Șterge produs</string>
    <string name="modifica_produs">Modifică produs</string>

    <string name="adauga_client">Adaugă client</string>
    <string name="sterge_client">Șterge client</string>
    <string name="modifica_client">Modifică client</string>

    <!-- adauga produs-->
    <string name="nume">Nume</string>
    <string name="cod">Cod</string>
    <string name="pret">Preț</string>
    <string name="incarca_imagine">Încarcă imagine:</string>
    <string name="adauga">Adaugă</string>

    <!-- adauga client-->
    <string name="denumire">Denumire</string>
    <string name="cif">CIF</string>
    <string name="reg_com">Reg Com</string>
    <string name="platitor_tva">Plătitor TVA</string>
    <string name="localitate">Localitate</string>
    <string name="judetul">Județul</string>
    <string name="adresa">Adresa</string>
    <string name="email">Email</string>
    <string name="pers_contact">Pers Contact</string>
    <string name="telefon">Telefon</string>
    <string name="da">da</string>
    <string name="nu">nu</string>

    <!-- contul meu-->
    <string name="salveaza">Salvează</string>
    <string name="capital_social">Capital Social</string>
    <string name="cod_postal">Cod Poștal</string>
    <string name="cont_bancar">Cont Bancar</string>
    <string name="banca">Bancă</string>
    <string name="cota_tva">Cotă TVA</string>
    <string name="tip_tva">Tip TVA</string>

    <!-- drawer layout-->
    <string name="nav_open">Deschide</string>
    <string name="nav_close">Închide</string>
    <string name="contul_meu">Contul meu</string>
    <string name="abonament">Abonament</string>

    <!-- genereaza oferta-->
    <string name="trimite_oferta">Trimite Ofertă</string>
    <string name="selecteaza_client">Selectează client</string>
    <string name="selecteaza_produs">Selectează produs</string>
    <string name="nume_delegat">Nume Delegat</string>
    <string name="ci_delegat">CI Delegat</string>
    <string name="delegati">Delegați</string>
    <string name="cnp_delegat">CNP Delegat</string>
    <string name="mijloc_transport">Mijloc Transport</string>
    <string name="numar_mij_transport">Numar mijloc transport</string>
    <string name="fragment_neimplementat">Fragment neimplemantat</string>
    <string name="discount">Discount:</string>

    <!--bine-ati-venit-->

    <string name="bine_ati_venit">Bine ați venit!</string>
    <string name="creeaza_cont">Creează cont</string>
    <string name="despre">Despre</string>

    <!--abonament-->
    <string name="selecteaza_abonament">Selectează abonament:</string>
    <string name="durata">Durata</string>
    <string name="trial">Trial 1 lună</string>
    <string name="o_luna">1 lună</string>
    <string name="un_an">1 an</string>
    <string name="tip">Tip</string>
    <string name="gratuit">Gratuit</string>
    <string name="plateste">Plătește</string>
    <string name="abonament_curent">Abonament curent:</string>
    <string name="pdf_viewer">Vizualizare PDF</string>

    <!--despre-->
    <string name="text_1">Mulțumim că ați descărcat aplicația noastră!</string>
    <string name="text_2">Deviz este o aplicație ce permite facturarea și ofertarea automată a unor produse către o listă de clienți.</string>
    <string name="text_3">Toate facturile și ofertele sunt salvate în format pdf în folderul de descărcări al dispozitivului dvs. </string>
    <string name="text_4">Puteți adăuga produse din pagina "Produse". Pentru fiecare produs trebuie specificat: numele, codul, preț și imagine.</string>
    <string name="text_5">Puteți adăuga clienți din pagina "Clienți". Pentru fiecare client trebuie specificat: denumirea, cif-ul, reg-comul, plătitor tva(da sau nu), localitatea, județul, adresa, email-ul, persoana de contact, numărul de telefon.</string>
    <string name="title_activity_abonamente">activity_abonamente</string>

    <!--rapoarte-->
    <string name="vezi">Vezi document</string>
    <string name="sterge">Șterge document</string>
    <string name="trimite">Trimite document</string>
    <string name="modifica">Modifică document</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>