<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.fg_contul_meu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/fg_cm_salveaza">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/denumire"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_denumire"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/cif"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_cif"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_com"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_reg_com"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/platitor_tva"
                    style="@style/TextViewGetText"/>

                <CheckBox
                    android:id="@+id/fg_cm_plat_tva_da"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="@string/da"/>


                <CheckBox
                    android:id="@+id/fg_cm_plat_tva_nu"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="@string/nu"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/capital_social"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_capital_social"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/localitate"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_localitate"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/judetul"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_judetul"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/adresa"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_adresa"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/cod_postal"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_cod_postal"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/telefon"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_telefon"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_email"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/cont_bancar"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_cont_bancar"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/banca"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_banca"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/cota_tva"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_cota_tva"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_tva"
                    style="@style/TextViewGetText"/>

                <EditText
                    android:id="@+id/fg_cm_tip_tva"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/fg_cm_salveaza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salveaza"
        android:layout_alignParentBottom="true"
        style="@style/BigButton"/>
</RelativeLayout>