<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/bine_ati_venit"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:padding="50dp"/>


        <Button
            android:id="@+id/btn_fg_incp_creeaza_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creeaza_cont"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            style="@style/BigButton"/>

        <Button
            android:id="@+id/btn_fg_incp_despre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/despre"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            style="@style/BigButton"/>
    </LinearLayout>
</RelativeLayout>