<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fg_produce_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/rapoarte_lista_facturi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_above="@id/fg_rapoarte_ll"/>

    <LinearLayout
        android:id="@+id/fg_rapoarte_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_vezi_rapoarte"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/vezi"
            android:textSize="12sp"
            android:padding="10dip"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_sterge_rapoarte"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sterge"
            android:textSize="12sp"
            android:padding="10dip"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_trimite_rapoarte"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/trimite"
            android:textSize="12sp"
            android:padding="10dip"
            android:layout_margin="10dp"/>
    </LinearLayout>
</RelativeLayout>